# initiative

./: .gitignore  .prettierrc  .rgignore  CLAUDE.md  Cargo.toml  flake.nix  justfile  notes.md  package-lock.json  package.json
.bruno/: Create Spell.bru  Get All Spells.bru  bruno.json
.bruno/Monsters/: Get All.bru  folder.bru
.bruno/Spells/: Create.bru  Get All.bru  folder.bru
api/: Cargo.toml  build.rs
api/migrations/: 20250726184053_enums.sql  20250726191139_spell.sql  20250801185329_monster.sql  20250802100140_spells_materialized_view.sql  20250802101333_move_attributes_to_monster.sql  20250802131856_change_spells_to_normal_view.sql  20250807212059_monster_view.sql  20250929073549_encounter.sql
api/src/: handlers.rs  lib.rs  main.rs
api/src/encounter/: handler.rs  repository.rs
api/src/handlers/: spells.rs
api/src/monster/: handler.rs  mod.rs  repository.rs
api/src/monster/types/: alignment.rs  attribute.rs  language.rs  mod.rs  monster.rs  monster_type.rs  movement.rs  size.rs  skill.rs
api/src/repositories/: spell.rs
api/src/shared/types/: class.rs  condition.rs  damage_type.rs  mod.rs
api/src/spell/: handler.rs  mod.rs  repository.rs
api/src/spell/types/: magic_school.rs  mod.rs  spell.rs  spell_level.rs
api/src/types/: alignment.rs  attribute.rs  class.rs  condition.rs  damage_type.rs  encounter.rs  language.rs  magic_school.rs  mod.rs  monster.rs  monster_type.rs  movement.rs  sight.rs  size.rs  skill.rs  spell.rs  spell_level.rs
crates/app/: Cargo.toml
crates/app/src/: app.rs  content.rs  context.rs  message.rs  session.rs  state.rs  status.rs  tab.rs
crates/app/src/navigation/: group.rs  item.rs  message.rs  mod.rs
crates/app/src/tab/: action.rs  bar.rs  content.rs  id.rs  manager.rs  message.rs  mod.rs  payload.rs  request.rs
crates/app/src/view/: content.rs  mod.rs  request.rs
crates/app/src/view/dashboard/: message.rs  mod.rs
crates/app/src/view/index/: message.rs  mod.rs
crates/app/src/view/spell/: mod.rs
crates/app/src/view/spell/form/: data.rs  fields.rs  loader.rs  message.rs  mod.rs
crates/app/src/view/spell/list/: message.rs  mod.rs
crates/assets/: Cargo.toml
crates/assets/src/: assets.rs
crates/components/: Cargo.toml
crates/components/src/: animation.rs  components.rs  container.rs  field.rs  form.rs  hr.rs  icon.rs  label.rs  lib.rs  row.rs  text.rs  title.rs  toggle.rs
crates/components/src/icon/: mod.rs  name.rs  size.rs
crates/components/src/image_field/: clipboard.rs  error.rs  file.rs  mod.rs  state.rs
crates/components/src/multi_text_field/: mod.rs  rules.rs  state.rs
crates/components/src/number_field/: mod.rs  rules.rs  state.rs
crates/components/src/select_field/: mod.rs  state.rs
crates/components/src/text_area_field/: mod.rs  rules.rs  state.rs
crates/components/src/text_field/: mod.rs  rules.rs  state.rs
crates/fonts/: Cargo.toml
crates/fonts/src/: fonts.rs
crates/initiative/: Cargo.toml
crates/initiative/src/: main.rs
crates/logging/: Cargo.toml
crates/logging/src/: logging.rs
crates/state/: Cargo.toml
crates/state/src/: app.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0000_data_driven_table.sql  0001_data_driven_defaults.sql  0002_create_spells.sql
crates/storage/src/: lib.rs
crates/storage/src/clients/: local.rs
crates/storage/src/clients/local/: mod.rs  options.rs  spells.rs
crates/storage/src/models/: mod.rs  spell.rs
crates/storage/src/repositories/: mod.rs  options.rs  spells.rs
crates/style/: Cargo.toml
crates/style/src/: button.rs  checkbox.rs  color.rs  combobox.rs  container.rs  float.rs  icon.rs  layout.rs  lib.rs  menu.rs  pick_list.rs  progress_bar.rs  radio.rs  rule.rs  scrollable.rs  select.rs  slider.rs  svg.rs  table.rs  text.rs  text_area.rs  text_editor.rs  text_input.rs  theme.rs  toggler.rs  tooltip.rs  typography.rs
crates/style/src/button/: background.rs  danger.rs  mod.rs  primary.rs
crates/style/src/container/: background.rs  mod.rs  primary.rs
crates/style/src/text/: mod.rs
crates/style/src/theme/: mod.rs  variant.rs
crates/types/: Cargo.toml
crates/types/src/: form_mode.rs  lib.rs  view.rs
crates/types/src/message/: mod.rs  navigation.rs
crates/types/src/spell/: area.rs  casting_time.rs  class.rs  duration.rs  filter.rs  level.rs  material.rs  mod.rs  range.rs  school.rs  shape.rs
crates/types/src/traits/: mod.rs
crates/types/src/value/: error.rs  mod.rs  string.rs
crates/validate/: Cargo.toml
crates/validate/src/: error.rs  rules.rs  validate.rs
crates/views/: Cargo.toml
crates/views/src/: index.rs  lib.rs
crates/views/src/root/: mod.rs  navigation.rs
crates/views/src/spells/: form.rs  mod.rs
crates/widgets/: Cargo.toml
crates/widgets/src/: animation.rs  button.rs  error.rs  form.rs  icon.rs  label.rs  select.rs  text.rs  text_area.rs  text_input.rs  toggle.rs  widgets.rs
crates/widgets/src/multi_text_input/: mod.rs
crates/widgets/src/number_input/: mod.rs  rules.rs  state.rs
crates/widgets/src/select/: mod.rs  state.rs  style.rs
crates/widgets/src/text_area/: mod.rs  rules.rs  state.rs  style.rs
crates/widgets/src/text_input/: mod.rs  rules.rs  state.rs  style.rs
src/: condition.rs  create_new_enemy.rs  damage.rs  dice.rs  enemy.rs  entity.rs  main.rs  message.rs  player.rs  screen.rs
view/: components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
view/src/: App.svelte  app.css
view/src/lib/: Encounters.svelte  Monsters.svelte  NotFound.svelte
view/src/lib/components/: Button.svelte  Checkbox.svelte  CheckboxGroup.svelte  Combobox.svelte  Container.svelte  Input.svelte  Label.svelte  ModeToggle.svelte  Navbar.svelte  Route.svelte  Select.svelte  SelectInput.svelte  TextArea.svelte  Title.svelte  Toggle.svelte
view/src/lib/encounter/: service.ts  validate.ts
view/src/lib/monster/: service.ts  validate.ts
view/src/lib/monsters/: CreateMonster.svelte  Monsters.svelte  ViewMonster.svelte
view/src/lib/routes/: EncounterBuilder.svelte  EncounterList.svelte  EncounterView.svelte  Home.svelte  MonsterList.svelte  (+7 more)
(+155 files in other folders)
