[workspace]
resolver = "2"
members = [
  "crates/app",
  "crates/assets",
  "crates/components",
  "crates/initiative",
  "crates/logging",
  "crates/types",
  "crates/views",
]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
# External crates
iced = { version = "=0.13.1", features = ["advanced", "image", "svg"] }
parking_lot = "=0.12.5"
rust-embed = "=8.9.0"
strum = { version = "=0.27.2", features = ["derive"] }
strum_macros = "=0.27.2"
thiserror = "=2.0.17"
tracing = "=0.1.41"
tracing-subscriber = "=0.3.20"
uuid = "=1.18.1"

# Internal crates
app = { path = "crates/app" }
assets = { path = "crates/assets" }
components = { path = "crates/components" }
logging = { path = "crates/logging" }
types = { path = "crates/types" }
views = { path = "crates/views" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
