[workspace]
resolver = "2"
members = [
  "crates/app",
  "crates/assets",
  "crates/components",
  "crates/fonts",
  "crates/initiative",
  "crates/logging",
  "crates/storage",
  "crates/style",
  "crates/types",
  "crates/widgets",
]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
# External crates
iced = { version = "=0.14.0", features = ["advanced", "image", "svg", "tokio"] }
arboard = "=3.6.1"
async-trait = "=0.1.89"
dirs = "=6.0.0"
iced_aw = "=0.13.1"
image = "=0.25.10"
parking_lot = "=0.12.5"
rfd = "=0.17.2"
rust-embed = { version = "=8.9.0", features = ["include-exclude"] }
serde = "=1.0.228"
strum = { version = "=0.27.2", features = ["derive"] }
strum_macros = "=0.27.2"
sqlx = { version = "=0.8.6", features = [
  "sqlite",
  "runtime-tokio",
  "tls-native-tls",
] }
thiserror = "=2.0.17"
tokio = { version = "=1.52.1", features = ["rt", "fs"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter"] }
uuid = "=1.18.1"

# Internal crates
app = { path = "crates/app" }
assets = { path = "crates/assets" }
components = { path = "crates/components" }
fonts = { path = "crates/fonts" }
logging = { path = "crates/logging" }
storage = { path = "crates/storage" }
style = { path = "crates/style" }
types = { path = "crates/types" }
widgets = { path = "crates/widgets" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
