[package]
name = "initiative"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "=0.8.3"
include_dir = "=0.7.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
serde_derive = "1.0.219"
sqlx = { version = "=0.8.6", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "derive",
  "macros",
  "migrate",
  "uuid",
] }
tokio = { version = "=1.44.2", features = ["rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "=1.17.0", features = ["v4", "serde"] }
