[package]
name = "app"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[lib]
path = "src/app.rs"

[dependencies]
# External crates
iced.workspace = true
strum.workspace = true
tracing.workspace = true

# Internal crates
components.workspace = true
types.workspace = true

[lints]
workspace = true
