[package]
name = "assets"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[lib]
path = "src/assets.rs"

[dependencies]
# External crates
iced.workspace = true
rust-embed.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Internal crates

[lints]
workspace = true
