[package]
name = "components"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[lib]
path = "src/components.rs"

[dependencies]
# External crates
arboard.workspace = true
iced.workspace = true
image.workspace = true
rfd.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# Internal crates
assets.workspace = true
fonts.workspace = true
style.workspace = true
widgets.workspace = true

[lints]
workspace = true
