[package]
name = "initiative"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[dependencies]
# External crates
anyhow.workspace = true
gpui.workspace = true
gpui-component.workspace = true
parking_lot.workspace = true
tracing.workspace = true

# Internal crates
assets.workspace = true
logging.workspace = true
state.workspace = true
views.workspace = true

[lints]
workspace = true
