[package]
name = "storage"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[dependencies]
# External
async-trait.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
