[package]
name = "views"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[dependencies]
# External crates
gpui.workspace = true
gpui-component.workspace = true
strum.workspace = true
strum_macros.workspace = true

# Internal crates
components.workspace = true
state.workspace = true

[lints]
workspace = true
