[package]
name = "views"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[dependencies]
# External crates
strum.workspace = true
strum_macros.workspace = true
tracing.workspace = true

# Internal crates
components.workspace = true
types.workspace = true

[lints]
workspace = true
